tests/error/auto_not_array.gw
#! [contains]  not allowed in auto loop
Object i;
foreach(a: i)
  <<< a >>>;
